conditions.Conditions.scala.error
Compilation error:
Conditions:1: error: value update is not a member of Boolean
if (isFacingWall()=true){
    ^